# new_api_tools

./: .dockerignore  .env.example  .env.go.example  .gitignore  CHANGELOG.md  DESIGN.md  DESIGN_V2_SIMPLIFIED.md  Dockerfile  Dockerfile.go  FINAL_SUMMARY.md  FIXED_ISSUES.md  IMPLEMENTATION_GUIDE.md  Makefile  OPTIMIZATION_GUIDE.md  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_FIX_SUMMARY.md  README.md  RELEASE_0.1.0.md  START_HERE.md  START_HERE_V2.md  WINDOWS_PATH_FIX.md  api_request.txt  deploy.sh  docker-compose.go.yml  docker-compose.host.yml  docker-compose.logdb.yml  docker-compose.yml  index.html  install.sh  newapi_database_schema.md  setup-log-db.sh
backend/: .dockerignore  .gitignore  Dockerfile  README.md  go.mod  go.sum  pyproject.toml  requirements.txt  start.bat  start.sh  test_api.py
backend/app/: __init__.py  ai_auto_ban_routes.py  ai_auto_ban_service.py  auth.py  auth_routes.py  auto_group_routes.py  auto_group_service.py  cache_manager.py  cached_dashboard.py  config.py  dashboard_routes.py  dashboard_service.py  database.py  expiration_calculator.py  ip_distribution_service.py  ip_geo_service.py  ip_monitoring_routes.py  ip_monitoring_service.py  local_storage.py  log_analytics_routes.py  log_analytics_service.py  logger.py  main.py  model_status_routes.py  model_status_service.py  redemption_service.py  risk_monitoring_routes.py  risk_monitoring_service.py  routes.py  storage_routes.py  system_routes.py  system_scale_service.py  top_up_routes.py  top_up_service.py  uptime_kuma_routes.py  user_management_routes.py  (+1 more)
(+265 files in other folders)
